# yaptpy

./: .bumpversion.cfg  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/yaptpy/: __init__.py  __main__.py
tests/: conftest.py  test_yaptpy.py
