[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaptpy"
version = "0.1.0"
description = "CLI tool that generates highly obfuscated x86_64 reverse shell shellcode with multiple evasion techniques"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = ["pwntools", "cryptography"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["yaptpy[dev,test,lint]"]

[project.scripts]
yaptpy = "yaptpy.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/yaptpy"
Repository = "https://github.com/daedalus/yaptpy"
Issues = "https://github.com/daedalus/yaptpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/yaptpy"]

[tool.hatch.build.targets.sdist]
include = ["src/yaptpy"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "TCH"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=50"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools_scm]
